# smart-invoice

./: .gitignore  pyproject.toml
frontend/: index.html  script.js  styles.css
smart_invoice/: main.py  output.xlsx
