[tool.poetry]
name = "smart-invoice"
version = "0.1.0"
description = ""
authors = ["abdelmalek0 <djamaa.abdelmalek98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
flask = "^3.0.3"
flask-cors = "^5.0.0"
pymupdf = "^1.24.10"
openpyxl = "^3.1.5"
reorder-python-imports = "^3.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
